Remove public Team View campaign ops snapshot from marketing landing

--- a/marketing.html
+++ b/marketing.html
@@ -38,8 +38,8 @@
       </section>
 
       <section class="section">
-        <h2>See The Dashboard Your Team Will Run</h2>
-        <p class="lead">Simple, practical views for lead volume, CPL, campaign status, and publish workflow.</p>
+        <h2>See The Owner Dashboard</h2>
+        <p class="lead">Simple, practical view for lead volume, CPL, booked calls, and source performance.</p>
         <div class="snapshot-grid">
           <article class="snapshot-card">
             <h3>Owner View: Leads + Cost</h3>
@@ -47,14 +47,6 @@
               class="snapshot-image"
               src="/marketing-snapshot-dashboard.svg"
               alt="Snapshot of customer lead generation dashboard with lead volume, CPL, and channel performance cards"
-            />
-          </article>
-          <article class="snapshot-card">
-            <h3>Team View: Campaign Ops</h3>
-            <img
-              class="snapshot-image"
-              src="/marketing-snapshot-ops.svg"
-              alt="Snapshot of campaign operations board showing generated ad packs, budget controls, and publishing queue"
             />
           </article>
         </div>
