Remove ad messaging step and simplify budget finish flow

--- a/marketing-lead-gen-assets.html
+++ b/marketing-lead-gen-assets.html
@@ -17,7 +17,7 @@
       <div class="nav-wrap">
         <a class="brand" href="/marketing">Account Lead Insights</a>
         <nav class="top-nav top-nav-minimal">
-          <a class="nav-back" href="/marketing-lead-gen/creative">Back</a>
+          <a class="nav-back" href="/marketing-lead-gen">Back</a>
           <a href="/lead-insights-login">Login</a>
         </nav>
         <a class="cta-pill" href="/marketing-lead-gen">Get Started</a>
@@ -33,7 +33,7 @@
       <section class="section">
         <div class="leadgen-shell single">
           <article class="leadgen-card">
-            <p class="step-kicker">Step 3 of 4</p>
+            <p class="step-kicker">Step 2 of 3</p>
             <h2>Upload Service Assets and Proof</h2>
             <p id="assetsSummary" class="leadgen-meta"></p>
 
@@ -74,7 +74,7 @@
               </label>
 
               <div class="funnel-actions">
-                <a class="btn btn-secondary" href="/marketing-lead-gen/creative">Back</a>
+                <a class="btn btn-secondary" href="/marketing-lead-gen">Back</a>
                 <button class="btn btn-primary" type="submit">Continue to Budget Allocation</button>
               </div>
             </form>
