--- a/marketing-lead-gen-budget.html
+++ b/marketing-lead-gen-budget.html
@@ -33,7 +33,7 @@
       <section class="section">
         <div class="leadgen-shell single">
           <article class="leadgen-card">
-            <p class="step-kicker">Step 4 of 4</p>
+            <p class="step-kicker">Step 3 of 3</p>
             <h2>Allocate Monthly Budget Across Channels</h2>
             <p id="budgetSummary" class="leadgen-meta"></p>
 
@@ -44,26 +44,11 @@
 
               <div class="funnel-actions">
                 <a class="btn btn-secondary" href="/marketing-lead-gen/assets">Back</a>
-                <button class="btn btn-primary" type="submit">Generate Lead Plan</button>
+                <button class="btn btn-primary" type="submit">Finish Setup</button>
               </div>
             </form>
 
             <p id="budgetStatus" class="message" aria-live="polite"></p>
-            <div class="funnel-actions">
-              <button id="retryGenerateBtn" class="btn btn-secondary" type="button" style="display: none">
-                Retry Generate
-              </button>
-            </div>
-          </article>
-
-          <article class="leadgen-card">
-            <h2>Generated Plan</h2>
-            <div class="funnel-actions">
-              <button id="exportPlanBtn" class="btn btn-secondary" type="button" disabled>Export Plan (JSON)</button>
-            </div>
-            <div id="budgetOutput">
-              <p class="leadgen-empty">Submit the allocation to generate your final plan.</p>
-            </div>
           </article>
         </div>
       </section>
