--- a/marketing-lead-gen.html
+++ b/marketing-lead-gen.html
@@ -54,9 +54,9 @@
       <section class="section">
         <div class="leadgen-shell single">
           <article class="leadgen-card">
-            <p class="step-kicker">Step 1 of 4</p>
+            <p class="step-kicker">Step 1 of 3</p>
             <h2>Business + Channel Intake</h2>
-            <p class="lead">Enter your business details and selected channels. Then continue to the creative step.</p>
+            <p class="lead">Enter your business details and selected channels. Then continue to the assets step.</p>
 
             <form id="leadGenForm" class="leadgen-form">
               <label>
@@ -156,7 +156,7 @@
                 Landing Page URL (optional)
                 <input name="landingPage" type="url" maxlength="260" placeholder="https://yourcompany.com/service-area" />
               </label>
-              <button class="btn btn-primary" type="submit">Continue to Creative Step</button>
+              <button class="btn btn-primary" type="submit">Continue to Assets</button>
             </form>
             <p id="leadGenStatus" class="message" aria-live="polite"></p>
           </article>
