Make lead generation steps 1-4 non-clickable cards

--- a/marketing.html
+++ b/marketing.html
@@ -57,26 +57,26 @@
         <h2>Go Straight Into The Lead Generation Flow</h2>
         <p class="lead">Move from intake to live campaigns and tracked leads in one clear workflow.</p>
         <div class="flow-grid">
-          <a class="flow-step-card" href="/marketing-lead-gen">
+          <article class="flow-step-card flow-step-card-static">
             <span class="flow-step-index">Step 1</span>
             <h3>Business + Service Area Intake</h3>
             <p>Add trade type, service area, offer, and channel mix.</p>
-          </a>
-          <a class="flow-step-card" href="/marketing-lead-gen/assets">
+          </article>
+          <article class="flow-step-card flow-step-card-static">
             <span class="flow-step-index">Step 2</span>
             <h3>Ad Asset Pack Builder</h3>
             <p>Generate ad inputs your team can paste directly into Facebook and Google.</p>
-          </a>
-          <a class="flow-step-card" href="/marketing-lead-gen/budget">
+          </article>
+          <article class="flow-step-card flow-step-card-static">
             <span class="flow-step-index">Step 3</span>
             <h3>Budget + Lead Plan</h3>
             <p>Set spend by channel and forecast expected lead volume.</p>
-          </a>
-          <a class="flow-step-card" href="/marketing-lead-tracker">
+          </article>
+          <article class="flow-step-card flow-step-card-static">
             <span class="flow-step-index">Step 4</span>
             <h3>Lead Tracker + Job Outcomes</h3>
             <p>Track lead quality, booked calls, closed jobs, and ROI by source.</p>
-          </a>
+          </article>
         </div>
         <div class="footer-cta">
           <a class="btn btn-secondary" href="/free-call">Free Call to Learn More</a>
