--- a/account-lead-insights-backend/index.html
+++ b/account-lead-insights-backend/index.html
@@ -23,7 +23,7 @@
         <p class="subtext">Run Facebook and Google campaigns for customers with controlled automation.</p>
       </div>
       <div class="topbar-actions">
-        <a id="backToLandingBtn" class="btn btn-secondary" href="/">Back</a>
+        <a id="backToLandingBtn" class="btn btn-secondary" href="/go-landing">Back</a>
         <button id="simulateBtn" class="btn btn-primary" type="button">Run 24h Cycle</button>
       </div>
     </header>
