Rename lead gen field label to Differentiators

--- a/marketing-lead-gen.html
+++ b/marketing-lead-gen.html
@@ -127,7 +127,7 @@
                 ></textarea>
               </label>
               <label class="full">
-                Differentiators (one per line)
+                Differentiators
                 <textarea
                   name="differentiators"
                   rows="3"
