Route ad-creation flow through quick intake and start fresh setup

--- a/marketing.html
+++ b/marketing.html
@@ -19,7 +19,7 @@
         <nav class="top-nav top-nav-minimal">
           <a href="/lead-insights-login">Login</a>
         </nav>
-        <a class="cta-pill" href="/marketing-lead-gen">Get Started</a>
+        <a class="cta-pill" href="/free-call">Get Started</a>
       </div>
     </header>
 
@@ -33,7 +33,7 @@
         </p>
         <div class="hero-actions">
           <a class="btn btn-secondary" href="/free-call">Free Call to Learn More</a>
-          <a class="btn btn-primary" href="/marketing-lead-gen">Get Started Right Away</a>
+          <a class="btn btn-primary" href="/free-call">Get Started Right Away</a>
           <a class="btn btn-secondary" href="/marketing-lead-tracker">View Example Owner Lead Dashboard</a>
         </div>
       </section>
@@ -59,28 +59,28 @@
         <div class="flow-grid">
           <article class="flow-step-card flow-step-card-static">
             <span class="flow-step-index">Step 1</span>
+            <h3>Quick Intake Form</h3>
+            <p>Share contact details and best availability to start setup.</p>
+          </article>
+          <article class="flow-step-card flow-step-card-static">
+            <span class="flow-step-index">Step 2</span>
             <h3>Business + Service Area Intake</h3>
             <p>Add trade type, service area, offer, and channel mix.</p>
           </article>
           <article class="flow-step-card flow-step-card-static">
-            <span class="flow-step-index">Step 2</span>
+            <span class="flow-step-index">Step 3</span>
             <h3>Ad Asset Pack Builder</h3>
             <p>Generate ad inputs your team can paste directly into Facebook and Google.</p>
           </article>
           <article class="flow-step-card flow-step-card-static">
-            <span class="flow-step-index">Step 3</span>
+            <span class="flow-step-index">Step 4</span>
             <h3>Budget + Lead Plan</h3>
             <p>Set spend by channel and forecast expected lead volume.</p>
-          </article>
-          <article class="flow-step-card flow-step-card-static">
-            <span class="flow-step-index">Step 4</span>
-            <h3>Lead Tracker + Job Outcomes</h3>
-            <p>Track lead quality, booked calls, closed jobs, and ROI by source.</p>
           </article>
         </div>
         <div class="footer-cta">
           <a class="btn btn-secondary" href="/free-call">Free Call to Learn More</a>
-          <a class="btn btn-primary" href="/marketing-lead-gen">Get Started Right Away</a>
+          <a class="btn btn-primary" href="/free-call">Get Started Right Away</a>
           <a class="btn btn-secondary" href="/founder-backend">Founder Access Backend</a>
         </div>
       </section>
