Add Signup List button and backend signup list page

--- a/account-lead-insights-backend/index.html
+++ b/account-lead-insights-backend/index.html
@@ -23,6 +23,7 @@
         <p class="subtext">Run Facebook and Google campaigns for customers with controlled automation.</p>
       </div>
       <div class="topbar-actions">
+        <a class="btn btn-secondary" href="/signups.html">Signup List</a>
         <a id="backToLandingBtn" class="btn btn-secondary" href="/go-landing">Back</a>
       </div>
     </header>
